--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="author" content="Mateusz Michalczyk">
   <meta name="description" content="Recruitment Task TO DO - React" />
-  <meta name="keywords" content="HTML, CSS, JS, REACT, RWD, TO DO" />
+  <meta name="keywords" content="HTML, CSS, JS, REACT, RWD, TO-DO" />
   <meta name="theme-color" content="#000000" />
 
   <title>Recruitment Task - TO DO</title>
